# api-concierge-cli

./: README.md  pyproject.toml
api_concierge_cli/: __init__.py  cli.py  get_schema.py  invoke.py  list.py  platform.py  types.py
api_concierge_cli/aws/: awslambda.py
docs/: protocol.md
example-stack/: README.md  template.yaml
example-stack/src/: handlers.py  requirements.txt
