[tool.poetry]
name = "api-concierge-cli"
version = "0.1.0"
description = ""
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"

[tool.poetry.scripts]
api-concierge = 'api_concierge_cli.cli:cli'

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
click = "^8.0.3"
boto3 = "^1.20.40"
requests = "^2.27.1"
dataclasses = { version = "*", python = "<3.7" }
importlib-metadata = { version = "~=1.0", python = "<3.8" }
jsonschema_prompt = { git = "https://github.com/benkehoe/jsonschema-prompt.git" }
jsonpointer = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
